# MasterThesis

./: Body Control System (BCS) Feature Description.txt  LLM_application.py  LLM_application_openai.py  README.md  instructions_docker_container.txt  llm_interaction.ipynb  requirements.txt  yasa_2.0.py
bcs_framework/: Dockerfile  instructions_bcs_framework.txt
bcs_framework/src/active_configuration_files/: CMakeLists.txt  main.cpp
bcs_framework/src/active_configuration_files/src/: DoorSystem.cpp  DoorSystem.hpp  HMI.cpp  HMI.hpp  Security.cpp  Security.hpp
bcs_framework/src/bcs_framework/: CMakeLists.txt  README.md  main.cpp  package.xml
bcs_framework/src/bcs_framework/base_features/: DoorSystem.cpp  DoorSystem.hpp  HMI.cpp  HMI.hpp  README.md  Security.cpp  Security.hpp
bcs_framework/src/bcs_framework/deltas/: AS.toml  Adjust_EM.toml  Automatic_Locking.toml  Automatic_PW.toml  CLS.toml  Control_AS.toml  Control_Automatic_PW.toml  Heatable.toml  Interior_Monitoring.toml  LED_AS.toml  LED_CLS.toml  LED_EM.toml  LED_FP.toml  LED_Heatable.toml  LED_PW.toml  RCK.toml  README.md  Safety_Function.toml
bcs_framework/src/bcs_framework/feature_configs/: DoorSystem.toml  HMI.toml  README.md  Security.toml
bcs_framework/src/bcs_framework/framework_core/: config_parser.cpp  config_parser.hpp  delta_processor.cpp  delta_processor.hpp  feature_config.cpp  feature_config.hpp  feature_model_generator.cpp  feature_model_generator.hpp  feature_model_generator_main.cpp  feature_model_generator_using_AST.cpp  framework_manager.cpp  framework_manager.hpp
bcs_framework/src/bcs_framework/generated_feature_model/: feature_model.xml
bcs_framework/src/bcs_framework/input_config/t-wise/: input_configuration_12.xml  input_configuration_5.xml  input_configuration_8.xml  input_configuration_9.xml
bcs_simulator/: Dockerfile  instructions_bcs_simulator.txt
bcs_simulator/src/bcs_simulator/: CMakeLists.txt
bcs_simulator/src/bcs_simulator/input_config/: input_configuration.xml
bcs_simulator/src/bcs_simulator/input_config/LLM/: input_configuration_1.xml  input_configuration_2.xml  input_configuration_3.xml  input_configuration_4.xml
bcs_simulator/src/bcs_simulator/input_config/t-wise/: input_configuration_1.xml  input_configuration_10.xml  input_configuration_11.xml  input_configuration_2.xml  input_configuration_3.xml  input_configuration_4.xml  input_configuration_6.xml  input_configuration_7.xml
bcs_simulator/src/bcs_simulator/qml/: main.qml  qml.qrc
bcs_simulator/src/bcs_simulator/qml/assets/: lock_on.pngZone.Identifier
bcs_simulator/src/bcs_simulator/qml/inputs/: AlarmControl.qml  HMI.qml  RemoteControl.qml
bcs_simulator/src/bcs_simulator/qml/outputs/: LedIndicators.qml  MirrorControl.qml  WindowControl.qml
bcs_simulator/src/bcs_simulator/src/: MessageModel.cpp  MessageModel.hpp  ROS2Bridge.cpp  ROS2Bridge.hpp  main.cpp
bcs_simulator/src/bcs_simulator/test_cases/: ConfigParser.cpp  ConfigParser.hpp  ExteriorMirrorTests.cpp  ExteriorMirrorTests.hpp  HMITests.cpp  HMITests.hpp  InteractionTests.cpp  InteractionTests.hpp  PowerWindowTests.cpp  PowerWindowTests.hpp  SecurityTests.cpp  SecurityTests.hpp  TestManager.cpp  TestManager.hpp  test_main.cpp
llm_input/: feature_model.uvl
